--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^7.1.2",
     "antd-mobile": "^2.3.3",
     "axios": "^0.20.0",
+    "jsonwebtoken": "^8.5.1",
     "rc-form": "^2.4.11",
+    "rc-upload": "^3.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "svg-sprite-loader": "^5.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -37,7 +40,6 @@
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.1.6",
-    "svg-sprite-loader": "^0.3.1"
+    "react-app-rewired": "^2.1.6"
   }
 }
